--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/rmf_battery
-	previous = 
-	base = b42dfc0
+	previous = b42dfc0
+	base = 3dacb93
 	trim = 
 	trimbase = 
